# pisco_dataset_clustering_tool

./: .gitignore  README.md  pyproject.toml
apps/: pipeline_app.py
pisco_dataset_clustering_tool/: __init__.py  api.py  pipeline.py  ssl_trainer.py
